--- a/Thesis.tex
+++ b/Thesis.tex
@@ -250,14 +250,19 @@ diploma or other qualifications.
   \include{Sources/Related}
   \include{Sources/Conclusion}
 
+
+  \appendix
+  \input{Sources/Appendix.mng}
+
+
+
+
 % This ensures that the subsequent sections are being included as root
 % items in the bookmark structure of your PDF reader.
 \bookmarksetup{startatroot}
 \backmatter
 
 \bibliography{Thesis}
-
-\appendix
 
   % \begingroup
   %   \let\clearpage\relax
